fix: set 0 and 10 to display correct contrast

--- a/src/style/components/routesTable.scss
+++ b/src/style/components/routesTable.scss
@@ -21,7 +21,7 @@
     font-family: $font-stack-data-mono;
   }
 
-  [class*="err-pc-0"] {
+  [class="err-pc-0"] {
     color: mix($color-danger, $color-success, 0);
   }
   [class*="err-pc-1"] {
@@ -51,7 +51,7 @@
   [class*="err-pc-9"] {
     color: mix($color-danger, $color-success, 90%);
   }
-  [class*="err-pc-100"] {
+  [class="err-pc-10"] {
     color: mix($color-danger, $color-success, 100%);
   }
 
